Properly center-align rows within expanded rows, fixes #7801

--- a/scss/grid/_classes.scss
+++ b/scss/grid/_classes.scss
@@ -53,6 +53,11 @@
     // Expanded (full-width) row
     &.#{$expanded} {
       max-width: none;
+
+      .#{$row} {
+        margin-left: auto;
+        margin-right: auto;
+      }
     }
   }
 
